--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,15 +12,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
+html {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-icon {
+  @apply p-2 h-10 w-10 flex items-center justify-center rounded-lg bg-gray-100 hover:bg-gray-200 transition;
 }
